feat(backend): ajouter les regles d'architecture ArchUnit et fiabiliser surefire
ModuleDependencyArchTest (bootstrap) enforce 4 regles a chaque build :
dependances inter-modules limitees a shared + couche contrat
(domain.entity/enums/event/port), shared base du graphe, auth feuille,
notification.service encapsule derriere CanalNotification.

- CanalNotification deplace service -> port (un port est fait pour etre
  consomme inter-modules, DEC-014)
- CalculTvaService deplace catalogue -> shared.service (DEC-003 : regle
  universelle, utile a tous les modules)
- archunit-junit5 (version deja geree par le parent) declare dans bootstrap
- surefire -Djdk.attach.allowAttachSelf=true : fixe l'echec intermittent
  d'auto-attache ByteBuddy/Mockito sur Windows (~50% des builds locaux)
- 12/12 modules SUCCESS, ArchUnit 4/4 verte, ledger mis a jour

🤖 Generated with Codebuff
Co-Authored-By: Codebuff <noreply@codebuff.com>